Solved minor aesthetic issues

--- a/aboutus.html
+++ b/aboutus.html
@@ -34,14 +34,14 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
-											<li class="current_page_item">
-											<a href="index.html">Home</a></li>
+											
 											<li>
-												<a href="orientationGroups.html">Orientation Groups</a>
+												<a href="orientationGroups.html">Orientation Groups</a></li>
 											<li><a href="timeline.html">Timeline</a></li>
 											<li><a href="aboutus.html">About Us</a></li>
 											<li><a href="gallery.html">Gallery	</a></li>
 											<li><a href="login.html">Login</a></li>
+											
 
 										</ul>
 									</nav>
@@ -50,7 +50,7 @@
 						</header>
 				</li>
 				<br><br>
-				<h5>The College Students' Committee (CSC) forms the student government at Tembusu College and produly presents Orientation 2015 as well. <br/>
+				<h5>The College Students' Committee (CSC) forms the student government at Tembusu College and produly presents Orientation 2015. <br/>
 				</h5>
 				<div id = "cscNewImage">
 				 <p><img id = "cscImage" src="cscNew.jpg" alt="dining hall" width="80%" height="50%" /></p>
