--- a/timeline.html
+++ b/timeline.html
@@ -34,13 +34,12 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
-											<li class="current_page_item">
-											<a href="index.html">Home</a></li>
-											<li>
-												<a href="orientationGroups.html">Orientation Groups</a>
+											
+												<li><a href="orientationGroups.html">Orientation Groups</a></li>
 											<li><a href="timeline.html">Timeline</a></li>
 											<li><a href="aboutus.html">About Us</a></li>
 											<li><a href="gallery.html">Gallery	</a></li>
+											<li><a href="login.html">Login</a></li>
 
 										</ul>
 									</nav>
