--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,21 @@
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
 			<link rel="stylesheet" href="css/style.css" />
+			
+		<style>
+		img.groups{
+		border:0px;position:relative;
+		}
+		</style>
+		<script>
+		function big(x) {
+	<!--x.onclick = function () {x.style.border = "0px solid";x.style.top = "-30px";sort(points);};
+	x.style.border = "border:5px solid #003900";
+}
+function normal(x) {
+	x.style.border = "border:0px";
+	}
+		</script>
 	</head>
 <body>
 <h1> Gallery</h1>
@@ -43,6 +58,32 @@
 							</div>
 						</header>
 				</li>
+				<h1 id = "hello">Gallery</h1>
+				<table id = "table" cellspacing="3" cellpadding="3"<col width="20" />
+                  <col width="300" />
+				  <col width="298" />	</table>
+				  
+<div class="inner">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="a.jpg" style="width:1200px;height:600px" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group1.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group2.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group3.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group4.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group5.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group6.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group7.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group8.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="b.jpg" style="width:1200px;height:600px" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group9.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group10.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group11.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group12.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group13.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group14.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group15.jpg" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="cscNew.jpg" style="width:800px;height:500px" id="32">
+<img onmouseover="big(this)" onmouseout="normal(this)" class="groups" src="images/group16.jpg" id="32">
+</div>
 </ul>
 </nav>
 </div>
